attempts to prevent scrollbar bug

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,6 @@
   padding: 0px;
   margin: 0px;
   font-family: 'Plus Jakarta Display', sans-serif;
-  overflow-x: hidden;
 }
 
 .fas{
@@ -140,6 +139,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 
 section{
@@ -147,6 +147,7 @@ section{
   flex-direction: column;
   align-items: center;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 .section-container{
